--- a/config_sample.env
+++ b/config_sample.env
@@ -1,10 +1,9 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
+
 # REQUIRED CONFIG
 BOT_TOKEN = "7461706786:AAHGwMtQTCRiNdY8qUkp5CGv_qX-8mB59ns"                              # Require restart after changing it while bot running
 OWNER_ID = "7251898668"                               # Require restart after changing it while bot running
 TELEGRAM_API = "29171167"                           # Require restart after changing it while bot running
-TELEGRAM_HASH = "29171167"                          # Require restart after changing it while bot running
+TELEGRAM_HASH = "7ea2149629e445936619f06a3c0dc716"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
@@ -73,7 +72,7 @@ MIRROR_FILENAME_REMNAME = ""
 # Log Channel/SuperGroup (Topics Support)
 LEECH_LOG_ID = "-1002194185780"
 MIRROR_LOG_ID = "-1002194185780"
-LINKS_LOG_ID = "-1002194185780"
+LINKS_LOG_ID = "-1002187395135"
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = ""
@@ -119,7 +118,7 @@ MDL_TEMPLATE = ""
 # Telegraph
 TITLE_NAME = "WZ-M/L-X"
 AUTHOR_NAME = "WZML-X"
-AUTHOR_URL = "https://t.me/WZML_X"
+AUTHOR_URL = "https://t.me/akmoviebotz"
 COVER_IMAGE = ""
 
 # Extra
